# trading-platform-pro

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  PROJECT_TREE.txt  Prompt_Vorlage.txt  Python VENV.docx  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  tree erstellen.txt
.github/workflows/: ci.yml  generate-docs.yml
config/: development.yaml  live.yaml  logging.yaml  paper.yaml
docs/adr/: README.md
docs/api/: API_Guidelines.md  TPP_API_Specification_v1.0.docx
docs/architecture/: Architecture.md  Domain_Model.md  Infrastructure.md  Project_Structure.md  TPP_MS2_Framework_Architecture_v1.0.docx  TPP_Software_Architecture_Document_SAD_v1.0.docx
docs/decisions/: Decision_Log.md  Roadmap.md  TPP_ADR_v1.0.docx
docs/developer/: AI_Agent_Guide.md  Coding_Standards.md  Development_Guidelines.md  Git_Workflow.md  Testing_Strategy.md
docs/operations/: CI_CD.md  Configuration.md  Logging.md  Monitoring.md  Runtime.md  TPP_Operations_Manual_v1.0.docx  TPP_Persona_Daily_Workflow_v1.0.docx  TPP_Trading_Knowledge_Base_v1.0.docx  Trading_Cockpit_Specification_Start.docx
docs/product/: Product_Roadmap.md  Product_Vision.md  Project_Overview.md  TPP_Product_Vision_v1.0.docx  TPP_Project_Charter_v1.0.docx  TPP_Roadmap_Milestones_v1.0.docx
docs/specifications/: Technical_Specifications.md  (+1 more)
scripts/: generate_docs.py
temp/: Info_Hinweis.txt  PROJECT_TREE.txt  Pytest_Lauf_Ergebnis.txt  Test.txt  Tree.txt
tools/: generate_project_tree.py  project_analysis_agent.py  project_dashboard.py
(+209 files in other folders)
